--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <section class="wrapper">
         <div class="result-container">
-                <div class="result"></div>
+                <div class="result" id="result"><p id="result-num"></p></div>
         </div>
         
         <div class="input-container">
-            <form>
+            <form id="form">
                 <input type="text" id="item" class="input" placeholder="Item">
                 <input type="number" id="quantity" class="input" placeholder="Quantity">
                 <input type="number" id="price" class="input" placeholder="Price">
@@ -27,8 +27,10 @@
             <button class="btn" id="eql-btn">=</button>
         </div>
         <div class="display-container">
-                <div class="display"></div>
+                <div class="display" id="display"></div>
         </div>
     </section>
+    <script src="js/index.js">
+    </script>
 </body>
 </html>
